@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,9 +22,9 @@ import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.ZoneId;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.UUID;
 
 import org.junit.jupiter.api.Test;
@@ -35,20 +35,19 @@ import org.springframework.boot.actuate.web.exchanges.HttpExchangesEndpoint;
 import org.springframework.boot.actuate.web.exchanges.Include;
 import org.springframework.boot.actuate.web.exchanges.RecordableHttpRequest;
 import org.springframework.boot.actuate.web.exchanges.RecordableHttpResponse;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpHeaders;
 import org.springframework.restdocs.payload.JsonFieldType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
 import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Tests for generating documentation describing {@link HttpExchangesEndpoint}.
@@ -57,20 +56,20 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
  */
 class HttpExchangesEndpointDocumentationTests extends MockMvcEndpointDocumentationTests {
 
-	@MockBean
+	@MockitoBean
 	private HttpExchangeRepository repository;
 
 	@Test
-	void httpExchanges() throws Exception {
+	void httpExchanges() {
 		RecordableHttpRequest request = mock(RecordableHttpRequest.class);
 		given(request.getUri()).willReturn(URI.create("https://api.example.com"));
 		given(request.getMethod()).willReturn("GET");
 		given(request.getHeaders())
-			.willReturn(Collections.singletonMap(HttpHeaders.ACCEPT, Arrays.asList("application/json")));
+			.willReturn(Collections.singletonMap(HttpHeaders.ACCEPT, List.of("application/json")));
 		RecordableHttpResponse response = mock(RecordableHttpResponse.class);
 		given(response.getStatus()).willReturn(200);
 		given(response.getHeaders())
-			.willReturn(Collections.singletonMap(HttpHeaders.CONTENT_TYPE, Arrays.asList("application/json")));
+			.willReturn(Collections.singletonMap(HttpHeaders.CONTENT_TYPE, List.of("application/json")));
 		Principal principal = mock(Principal.class);
 		given(principal.getName()).willReturn("alice");
 		Instant instant = Instant.parse("2022-12-22T13:43:41.00Z");
@@ -78,10 +77,9 @@ class HttpExchangesEndpointDocumentationTests extends MockMvcEndpointDocumentati
 		Clock end = Clock.offset(start, Duration.ofMillis(23));
 		HttpExchange exchange = HttpExchange.start(start, request)
 			.finish(end, response, () -> principal, () -> UUID.randomUUID().toString(), EnumSet.allOf(Include.class));
-		given(this.repository.findAll()).willReturn(Arrays.asList(exchange));
-		this.mockMvc.perform(get("/actuator/httpexchanges"))
-			.andExpect(status().isOk())
-			.andDo(document("httpexchanges", responseFields(
+		given(this.repository.findAll()).willReturn(List.of(exchange));
+		assertThat(this.mvc.get().uri("/actuator/httpexchanges")).hasStatusOk()
+			.apply(document("httpexchanges", responseFields(
 					fieldWithPath("exchanges").description("An array of HTTP request-response exchanges."),
 					fieldWithPath("exchanges.[].timestamp").description("Timestamp of when the exchange occurred."),
 					fieldWithPath("exchanges.[].principal").description("Principal of the exchange, if any.")
