@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
@@ -30,23 +29,22 @@ import org.springframework.boot.logging.LogLevel;
 import org.springframework.boot.logging.LoggerConfiguration;
 import org.springframework.boot.logging.LoggerGroups;
 import org.springframework.boot.logging.LoggingSystem;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.mockmvc.MockMvcRestDocumentation;
 import org.springframework.restdocs.payload.FieldDescriptor;
 import org.springframework.restdocs.payload.JsonFieldType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
 import static org.springframework.restdocs.payload.PayloadDocumentation.requestFields;
 import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Tests for generating documentation describing the {@link LoggersEndpoint}.
@@ -55,34 +53,29 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
  */
 class LoggersEndpointDocumentationTests extends MockMvcEndpointDocumentationTests {
 
-	private static final List<FieldDescriptor> levelFields = Arrays.asList(
+	private static final List<FieldDescriptor> levelFields = List.of(
 			fieldWithPath("configuredLevel").description("Configured level of the logger, if any.").optional(),
 			fieldWithPath("effectiveLevel").description("Effective level of the logger."));
 
-	private static final List<FieldDescriptor> groupLevelFields;
+	private static final List<FieldDescriptor> groupLevelFields = List
+		.of(fieldWithPath("configuredLevel").description("Configured level of the logger group, if any.")
+			.type(JsonFieldType.STRING)
+			.optional(), fieldWithPath("members").description("Loggers that are part of this group"));
 
-	static {
-		groupLevelFields = Arrays
-			.asList(fieldWithPath("configuredLevel").description("Configured level of the logger group, if any.")
-				.type(JsonFieldType.STRING)
-				.optional(), fieldWithPath("members").description("Loggers that are part of this group"));
-	}
-
-	@MockBean
+	@MockitoBean
 	private LoggingSystem loggingSystem;
 
 	@Autowired
 	private LoggerGroups loggerGroups;
 
 	@Test
-	void allLoggers() throws Exception {
+	void allLoggers() {
 		given(this.loggingSystem.getSupportedLogLevels()).willReturn(EnumSet.allOf(LogLevel.class));
 		given(this.loggingSystem.getLoggerConfigurations())
-			.willReturn(Arrays.asList(new LoggerConfiguration("ROOT", LogLevel.INFO, LogLevel.INFO),
+			.willReturn(List.of(new LoggerConfiguration("ROOT", LogLevel.INFO, LogLevel.INFO),
 					new LoggerConfiguration("com.example", LogLevel.DEBUG, LogLevel.DEBUG)));
-		this.mockMvc.perform(get("/actuator/loggers"))
-			.andExpect(status().isOk())
-			.andDo(MockMvcRestDocumentation.document("loggers/all",
+		assertThat(this.mvc.get().uri("/actuator/loggers")).hasStatusOk()
+			.apply(MockMvcRestDocumentation.document("loggers/all",
 					responseFields(fieldWithPath("levels").description("Levels support by the logging system."),
 							fieldWithPath("loggers").description("Loggers keyed by name."),
 							fieldWithPath("groups").description("Logger groups keyed by name"))
@@ -91,31 +84,30 @@ class LoggersEndpointDocumentationTests extends MockMvcEndpointDocumentationTest
 	}
 
 	@Test
-	void logger() throws Exception {
+	void logger() {
 		given(this.loggingSystem.getLoggerConfiguration("com.example"))
 			.willReturn(new LoggerConfiguration("com.example", LogLevel.INFO, LogLevel.INFO));
-		this.mockMvc.perform(get("/actuator/loggers/com.example"))
-			.andExpect(status().isOk())
-			.andDo(MockMvcRestDocumentation.document("loggers/single", responseFields(levelFields)));
+		assertThat(this.mvc.get().uri("/actuator/loggers/com.example")).hasStatusOk()
+			.apply(MockMvcRestDocumentation.document("loggers/single", responseFields(levelFields)));
 	}
 
 	@Test
-	void loggerGroups() throws Exception {
+	void loggerGroups() {
 		this.loggerGroups.get("test").configureLogLevel(LogLevel.INFO, (member, level) -> {
 		});
-		this.mockMvc.perform(get("/actuator/loggers/test"))
-			.andExpect(status().isOk())
-			.andDo(MockMvcRestDocumentation.document("loggers/group", responseFields(groupLevelFields)));
+		assertThat(this.mvc.get().uri("/actuator/loggers/test")).hasStatusOk()
+			.apply(MockMvcRestDocumentation.document("loggers/group", responseFields(groupLevelFields)));
 		resetLogger();
 	}
 
 	@Test
-	void setLogLevel() throws Exception {
-		this.mockMvc
-			.perform(post("/actuator/loggers/com.example").content("{\"configuredLevel\":\"debug\"}")
-				.contentType(MediaType.APPLICATION_JSON))
-			.andExpect(status().isNoContent())
-			.andDo(MockMvcRestDocumentation.document("loggers/set",
+	void setLogLevel() {
+		assertThat(this.mvc.post()
+			.uri("/actuator/loggers/com.example")
+			.content("{\"configuredLevel\":\"debug\"}")
+			.contentType(MediaType.APPLICATION_JSON))
+			.hasStatus(HttpStatus.NO_CONTENT)
+			.apply(MockMvcRestDocumentation.document("loggers/set",
 					requestFields(fieldWithPath("configuredLevel")
 						.description("Level for the logger. May be omitted to clear the level.")
 						.optional())));
@@ -123,12 +115,13 @@ class LoggersEndpointDocumentationTests extends MockMvcEndpointDocumentationTest
 	}
 
 	@Test
-	void setLogLevelOfLoggerGroup() throws Exception {
-		this.mockMvc
-			.perform(post("/actuator/loggers/test").content("{\"configuredLevel\":\"debug\"}")
-				.contentType(MediaType.APPLICATION_JSON))
-			.andExpect(status().isNoContent())
-			.andDo(MockMvcRestDocumentation.document("loggers/setGroup",
+	void setLogLevelOfLoggerGroup() {
+		assertThat(this.mvc.post()
+			.uri("/actuator/loggers/test")
+			.content("{\"configuredLevel\":\"debug\"}")
+			.contentType(MediaType.APPLICATION_JSON))
+			.hasStatus(HttpStatus.NO_CONTENT)
+			.apply(MockMvcRestDocumentation.document("loggers/setGroup",
 					requestFields(fieldWithPath("configuredLevel")
 						.description("Level for the logger group. May be omitted to clear the level of the loggers.")
 						.optional())));
@@ -143,11 +136,12 @@ class LoggersEndpointDocumentationTests extends MockMvcEndpointDocumentationTest
 	}
 
 	@Test
-	void clearLogLevel() throws Exception {
-		this.mockMvc
-			.perform(post("/actuator/loggers/com.example").content("{}").contentType(MediaType.APPLICATION_JSON))
-			.andExpect(status().isNoContent())
-			.andDo(MockMvcRestDocumentation.document("loggers/clear"));
+	void clearLogLevel() {
+		assertThat(this.mvc.post()
+			.uri("/actuator/loggers/com.example")
+			.content("{}")
+			.contentType(MediaType.APPLICATION_JSON)).hasStatus(HttpStatus.NO_CONTENT)
+			.apply(MockMvcRestDocumentation.document("loggers/clear"));
 		then(this.loggingSystem).should().setLogLevel("com.example", null);
 	}
 
@@ -164,7 +158,7 @@ class LoggersEndpointDocumentationTests extends MockMvcEndpointDocumentationTest
 		}
 
 		private Map<String, List<String>> getLoggerGroups() {
-			return Collections.singletonMap("test", Arrays.asList("test.member1", "test.member2"));
+			return Collections.singletonMap("test", List.of("test.member1", "test.member2"));
 		}
 
 	}
