@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 
 package org.springframework.boot.autoconfigure.jms.activemq;
-
-import java.util.stream.Collectors;
 
 import jakarta.jms.ConnectionFactory;
 import org.apache.activemq.ActiveMQConnectionFactory;
@@ -41,6 +39,7 @@ import org.springframework.jms.connection.CachingConnectionFactory;
  * @author Phillip Webb
  * @author Andy Wilkinson
  * @author Aurélien Leboulanger
+ * @author Eddú Meléndez
  */
 @Configuration(proxyBeanMethods = false)
 @ConditionalOnMissingBean(ConnectionFactory.class)
@@ -54,15 +53,19 @@ class ActiveMQConnectionFactoryConfiguration {
 		@Bean
 		@ConditionalOnProperty(prefix = "spring.jms.cache", name = "enabled", havingValue = "false")
 		ActiveMQConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			return createJmsConnectionFactory(properties, factoryCustomizers);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			return createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails);
 		}
 
 		private static ActiveMQConnectionFactory createJmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			return new ActiveMQConnectionFactoryFactory(properties,
-					factoryCustomizers.orderedStream().collect(Collectors.toList()))
-				.createConnectionFactory(ActiveMQConnectionFactory.class);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory(connectionDetails.getUser(),
+					connectionDetails.getPassword(), connectionDetails.getBrokerUrl());
+			new ActiveMQConnectionFactoryConfigurer(properties, factoryCustomizers.orderedStream().toList())
+				.configure(connectionFactory);
+			return connectionFactory;
 		}
 
 		@Configuration(proxyBeanMethods = false)
@@ -73,10 +76,11 @@ class ActiveMQConnectionFactoryConfiguration {
 
 			@Bean
 			CachingConnectionFactory jmsConnectionFactory(JmsProperties jmsProperties, ActiveMQProperties properties,
-					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
+					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+					ActiveMQConnectionDetails connectionDetails) {
 				JmsProperties.Cache cacheProperties = jmsProperties.getCache();
 				CachingConnectionFactory connectionFactory = new CachingConnectionFactory(
-						createJmsConnectionFactory(properties, factoryCustomizers));
+						createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails));
 				connectionFactory.setCacheConsumers(cacheProperties.isConsumers());
 				connectionFactory.setCacheProducers(cacheProperties.isProducers());
 				connectionFactory.setSessionCacheSize(cacheProperties.getSessionCacheSize());
@@ -94,10 +98,12 @@ class ActiveMQConnectionFactoryConfiguration {
 		@Bean(destroyMethod = "stop")
 		@ConditionalOnProperty(prefix = "spring.activemq.pool", name = "enabled", havingValue = "true")
 		JmsPoolConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactoryFactory(properties,
-					factoryCustomizers.orderedStream().collect(Collectors.toList()))
-				.createConnectionFactory(ActiveMQConnectionFactory.class);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+				ActiveMQConnectionDetails connectionDetails) {
+			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactory(connectionDetails.getUser(),
+					connectionDetails.getPassword(), connectionDetails.getBrokerUrl());
+			new ActiveMQConnectionFactoryConfigurer(properties, factoryCustomizers.orderedStream().toList())
+				.configure(connectionFactory);
 			return new JmsPoolConnectionFactoryFactory(properties.getPool())
 				.createPooledConnectionFactory(connectionFactory);
 		}
