@@ -23,6 +23,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -159,7 +160,7 @@ final class ChangeableUrls implements Iterable<URL> {
 					urls.add(referenced);
 				}
 				else {
-					referenced = new URL(jarUrl, URLDecoder.decode(entry, "UTF-8"));
+					referenced = new URL(jarUrl, URLDecoder.decode(entry, StandardCharsets.UTF_8));
 					if (new File(referenced.getFile()).exists()) {
 						urls.add(referenced);
 					}
