@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -49,30 +49,23 @@ import org.springframework.boot.configurationprocessor.metadata.ItemDeprecation;
  * Provide utilities to detect and validate configuration properties.
  *
  * @author Stephane Nicoll
+ * @author Scott Frederick
+ * @author Moritz Halbritter
  */
 class MetadataGenerationEnvironment {
 
 	private static final String NULLABLE_ANNOTATION = "org.springframework.lang.Nullable";
 
-	private static final Set<String> TYPE_EXCLUDES;
-	static {
-		Set<String> excludes = new HashSet<>();
-		excludes.add("com.zaxxer.hikari.IConnectionCustomizer");
-		excludes.add("groovy.lang.MetaClass");
-		excludes.add("groovy.text.markup.MarkupTemplateEngine");
-		excludes.add("java.io.Writer");
-		excludes.add("java.io.PrintWriter");
-		excludes.add("java.lang.ClassLoader");
-		excludes.add("java.util.concurrent.ThreadFactory");
-		excludes.add("jakarta.jms.XAConnectionFactory");
-		excludes.add("javax.sql.DataSource");
-		excludes.add("javax.sql.XADataSource");
-		excludes.add("org.apache.tomcat.jdbc.pool.PoolConfiguration");
-		excludes.add("org.apache.tomcat.jdbc.pool.Validator");
-		excludes.add("org.flywaydb.core.api.callback.FlywayCallback");
-		excludes.add("org.flywaydb.core.api.resolver.MigrationResolver");
-		TYPE_EXCLUDES = Collections.unmodifiableSet(excludes);
-	}
+	private static final Set<String> TYPE_EXCLUDES = Set.of("com.zaxxer.hikari.IConnectionCustomizer",
+			"groovy.lang.MetaClass", "groovy.text.markup.MarkupTemplateEngine", "java.io.Writer", "java.io.PrintWriter",
+			"java.lang.ClassLoader", "java.util.concurrent.ThreadFactory", "jakarta.jms.XAConnectionFactory",
+			"javax.sql.DataSource", "javax.sql.XADataSource", "org.apache.tomcat.jdbc.pool.PoolConfiguration",
+			"org.apache.tomcat.jdbc.pool.Validator", "org.flywaydb.core.api.callback.FlywayCallback",
+			"org.flywaydb.core.api.resolver.MigrationResolver");
+
+	private static final Set<String> DEPRECATION_EXCLUDES = Set.of(
+			"org.apache.commons.dbcp2.BasicDataSource#getPassword",
+			"org.apache.commons.dbcp2.BasicDataSource#getUsername");
 
 	private final TypeUtils typeUtils;
 
@@ -161,6 +154,13 @@ class MetadataGenerationEnvironment {
 	}
 
 	boolean isDeprecated(Element element) {
+		if (element == null) {
+			return false;
+		}
+		String elementName = element.getEnclosingElement() + "#" + element.getSimpleName();
+		if (DEPRECATION_EXCLUDES.contains(elementName)) {
+			return false;
+		}
 		if (isElementDeprecated(element)) {
 			return true;
 		}
@@ -174,14 +174,13 @@ class MetadataGenerationEnvironment {
 		AnnotationMirror annotation = getAnnotation(element, this.deprecatedConfigurationPropertyAnnotation);
 		String reason = null;
 		String replacement = null;
+		String since = null;
 		if (annotation != null) {
-			Map<String, Object> elementValues = getAnnotationElementValues(annotation);
-			reason = (String) elementValues.get("reason");
-			replacement = (String) elementValues.get("replacement");
+			reason = getAnnotationElementStringValue(annotation, "reason");
+			replacement = getAnnotationElementStringValue(annotation, "replacement");
+			since = getAnnotationElementStringValue(annotation, "since");
 		}
-		reason = (reason == null || reason.isEmpty()) ? null : reason;
-		replacement = (replacement == null || replacement.isEmpty()) ? null : replacement;
-		return new ItemDeprecation(reason, replacement);
+		return new ItemDeprecation(reason, replacement, since);
 	}
 
 	boolean hasConstructorBindingAnnotation(ExecutableElement element) {
@@ -279,6 +278,16 @@ class MetadataGenerationEnvironment {
 		return values;
 	}
 
+	String getAnnotationElementStringValue(AnnotationMirror annotation, String name) {
+		return annotation.getElementValues()
+			.entrySet()
+			.stream()
+			.filter((element) -> element.getKey().getSimpleName().toString().equals(name))
+			.map((element) -> asString(getAnnotationValue(element.getValue())))
+			.findFirst()
+			.orElse(null);
+	}
+
 	private Object getAnnotationValue(AnnotationValue annotationValue) {
 		Object value = annotationValue.getValue();
 		if (value instanceof List) {
@@ -287,6 +296,10 @@ class MetadataGenerationEnvironment {
 			return values;
 		}
 		return value;
+	}
+
+	private String asString(Object value) {
+		return (value == null || value.toString().isEmpty()) ? null : (String) value;
 	}
 
 	TypeElement getConfigurationPropertiesAnnotationElement() {
